syntax = "proto3";

option csharp_namespace = "gRPCService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc CustomFunc(CustomRequest) returns (CustomReply);
  rpc GetTeachers(TeacherRequest) returns (TeachersReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
message CustomReply
{
	string message = 1;
}
message CustomRequest
{
	string name = 1;
}
message TeacherRequest
{
	int32 DepartFK = 1;
}
message Teacher
{
	int32 TchPK = 1;
	string Name = 2;
	string Post = 3;
}
message TeachersReply
{
	repeated Teacher teachers = 1;
}

